# ChangeLog for dev-lang/R
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/R/ChangeLog,v 1.104 2007/11/26 23:02:37 markusle Exp $

*R-2.6.1 (26 Nov 2007)

  26 Nov 2007; Markus Dittrich <markusle@gentoo.org> +R-2.6.1.ebuild:
  Version bump.

*R-2.6.0-r2 (21 Nov 2007)

  21 Nov 2007; Sébastien Fabbro <bicatali@gentoo.org> -R-2.2.1.ebuild,
  -R-2.6.0.ebuild, +R-2.6.0-r2.ebuild:
  Major cleaning of dependencies and ebuild in general, add/remove USE flags
  making more sense, export pdf and html viewers with xdg-open

  21 Nov 2007; Joe Peterson <lavajoe@gentoo.org> R-2.6.0-r1.ebuild:
  Add elibtoolize

  21 Nov 2007; Joe Peterson <lavajoe@gentoo.org> R-2.6.0-r1.ebuild:
  Added ~x86-fbsd keyword (bug #199368)

  21 Nov 2007; Raúl Porcel <armin76@gentoo.org> R-2.6.0-r1.ebuild:
  Add ~alpha/~ia64 wrt #199368

  20 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org> R-2.2.1-r1.ebuild:
  Stable on amd64 wrt bug #198976.

  18 Nov 2007; Jeroen Roovers <jer@gentoo.org> R-2.6.0-r1.ebuild:
  Marked ~hppa (bug #199368).

  18 Nov 2007; Tobias Scherbaum <dertobi123@gentoo.org> R-2.2.1-r1.ebuild:
  ppc stable, bug #198976

  18 Nov 2007; Markus Rothe <corsair@gentoo.org> R-2.2.1-r1.ebuild:
  Stable on ppc64; bug #198976

  17 Nov 2007; Raúl Porcel <armin76@gentoo.org> R-2.2.1-r1.ebuild:
  ia64 stable wrt security #198976

  17 Nov 2007; Markus Meier <maekke@gentoo.org> R-2.2.1-r1.ebuild:
  x86 stable, security bug #198976

  15 Nov 2007; Ferris McCormick <fmccor@gentoo.org> R-2.2.1-r1.ebuild:
  Sparc stable, security bug #198976.

  15 Nov 2007; Sébastien Fabbro <bicatali@gentoo.org> R-2.2.1-r1.ebuild:
  Oops, reverting to unstable

*R-2.6.0-r1 (15 Nov 2007)
*R-2.2.1-r1 (15 Nov 2007)

  15 Nov 2007; Sébastien Fabbro <bicatali@gentoo.org> -files/R.desktop,
  -files/R-logo.png, metadata.xml, +R-2.2.1-r1.ebuild, -R-2.5.1.ebuild,
  +R-2.6.0-r1.ebuild: