@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST R-2.2.1.tar.gz 13665367 RMD160 b63b6c5ef1db27a879783460b0ecb6de0d4bba18 SHA1 537e0b89b8de55c1156474c76c19c1fcc210f756 SHA256 db442c769e5e8ecbdb33c771e41bdac4330b565652c5ca730f26f975df30c624
 DIST R-2.6.0.tar.gz 15447985 RMD160 54b3d183dfb15af7f861e7b62904998865ad194c SHA1 ff51578fc630e65ce0e2bb92b0e1f8324c94925d SHA256 8a916e653affa83584119dc08a8b12e30e430dee19a398513515003c43d791da
 DIST R-2.6.1.tar.gz 15519691 RMD160 0e50237916e03c9b88ab558c39a9a587aabf4991 SHA1 6f2c8694f1935fda382796d225e45bd6f8f7755b SHA256 8fe505cbd9562cc84422475bc5c0b8e1b88b14d0c9e11d0de4f9e83ae8ce2563
@@ -13,18 +16,18 @@ EBUILD R-2.6.0-r2.ebuild 2967 RMD160 d1d5356e01e2ec992d00a083c879f1f78a4f767b SH
 MD5 33a635220970ff7f0ee80c7824a39589 R-2.6.0-r2.ebuild 2967
 RMD160 d1d5356e01e2ec992d00a083c879f1f78a4f767b R-2.6.0-r2.ebuild 2967
 SHA256 9ba769893caf4c2256feae4ecbfb40d39590e3fa96d2be94e34818d916013bf3 R-2.6.0-r2.ebuild 2967
-EBUILD R-2.6.1.ebuild 2964 RMD160 f72151c79f6cf1a6bc7b89a97a1ebe63f330f131 SHA1 284ad8d3c598c272d76d23f30251f0cb37b51e36 SHA256 7fb34612904b410708a25826b67387cc0229575f8eb48201bcf7b701948e656b
-MD5 386ee91f1562248cb14dd2ac4d6952fc R-2.6.1.ebuild 2964
-RMD160 f72151c79f6cf1a6bc7b89a97a1ebe63f330f131 R-2.6.1.ebuild 2964
-SHA256 7fb34612904b410708a25826b67387cc0229575f8eb48201bcf7b701948e656b R-2.6.1.ebuild 2964
-MISC ChangeLog 16009 RMD160 8721de457fa515c442e33197e98536ed75d49699 SHA1 5c885f81d31f7849b99898632b983d145b4f2b84 SHA256 69cfdbe46e5a4a37cfde928a57788b6e57fd82f94c67ec4d968fc4163c9ba54e
-MD5 ddd1dbeba29df071bb933e87515a3379 ChangeLog 16009
-RMD160 8721de457fa515c442e33197e98536ed75d49699 ChangeLog 16009
-SHA256 69cfdbe46e5a4a37cfde928a57788b6e57fd82f94c67ec4d968fc4163c9ba54e ChangeLog 16009
-MISC metadata.xml 1230 RMD160 92a57957bfe23431bee43c7337685e21ec7eebc9 SHA1 646961f33a0c426b00404e80bbc81572f9f1967e SHA256 2a4edbadc7515e3a00ebc2765a4f5a3ae9f4e18312ad5ad465ca3b9a79d1df6e
-MD5 56882ea4b8951a745463d742ea29070b metadata.xml 1230
-RMD160 92a57957bfe23431bee43c7337685e21ec7eebc9 metadata.xml 1230
-SHA256 2a4edbadc7515e3a00ebc2765a4f5a3ae9f4e18312ad5ad465ca3b9a79d1df6e metadata.xml 1230
+EBUILD R-2.6.1.ebuild 2926 RMD160 72f0104124b62801686ffff516950aab35ea4eec SHA1 34c44e76e9edc8dc32d59be1566024ab29d8bb91 SHA256 c82233dd5d9ad3718ba1c6c1d8174d7831bc62ffe284d8ed88e571f23bb05e1e
+MD5 c53aa3ccc5d7f93c6def0bbf7e5c01ac R-2.6.1.ebuild 2926
+RMD160 72f0104124b62801686ffff516950aab35ea4eec R-2.6.1.ebuild 2926
+SHA256 c82233dd5d9ad3718ba1c6c1d8174d7831bc62ffe284d8ed88e571f23bb05e1e R-2.6.1.ebuild 2926
+MISC ChangeLog 16210 RMD160 109dd2f71d8311d4d3cb7ff86afa3fee7d6f90ca SHA1 f7206751ff315ca4c643636dbf1a6e4b7f9eff4a SHA256 4751b3c0130f7266f638df3037c0b9091c94f37a3e3294d39d13ab05ee880429
+MD5 1abfa981abd9e69bd23464f7700a05d9 ChangeLog 16210
+RMD160 109dd2f71d8311d4d3cb7ff86afa3fee7d6f90ca ChangeLog 16210
+SHA256 4751b3c0130f7266f638df3037c0b9091c94f37a3e3294d39d13ab05ee880429 ChangeLog 16210
+MISC metadata.xml 1019 RMD160 7bafb2129d1666600d4324d7979f98d4afe896e8 SHA1 7f8e029d6edce5402c81eb9b6fb088e545dc91b4 SHA256 8dbe1befd1f6009b4c346f090c07edb79ca14b04ca5cd02dbd5ba0a4c0106ace
+MD5 edbf2b05e31cfcaf02ee5c767174053a metadata.xml 1019
+RMD160 7bafb2129d1666600d4324d7979f98d4afe896e8 metadata.xml 1019
+SHA256 8dbe1befd1f6009b4c346f090c07edb79ca14b04ca5cd02dbd5ba0a4c0106ace metadata.xml 1019
 MD5 bb90ccfb5759b31b5bbf043e0374e366 files/digest-R-2.2.1-r1 229
 RMD160 8300f09f52235aadad8493a9b870f66edec8b918 files/digest-R-2.2.1-r1 229
 SHA256 dfc1aa1b94f944657bef2b7dbe68879a14582212746d132f3784819f29b07fa2 files/digest-R-2.2.1-r1 229
@@ -37,3 +40,10 @@ SHA256 35bb30b8975a9d46f716fe1612190ca0cf80ea0ecec812f3c9d5129feb51e243 files/di
 MD5 455db3c09e088d352537c97fda1b3db9 files/digest-R-2.6.1 229
 RMD160 91676f1fbe4062034f260f429c315429e80c6739 files/digest-R-2.6.1 229
 SHA256 15acfc0b5f61761fef2feff10c851ed45c186d617750ccd77da86caa0169074b files/digest-R-2.6.1 229
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHjjA01ycZbhPLE2ARAiN/AKCs0VU6okeBY4fB/Wuu06YgYz4++wCgog4U
+06aToefot+ZNJzV/kSE8QsM=
+=jbfI
+-----END PGP SIGNATURE-----
