@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/R
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/R/ChangeLog,v 1.104 2007/11/26 23:02:37 markusle Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/R/ChangeLog,v 1.105 2008/01/16 16:26:19 bicatali Exp $
+
+  16 Jan 2008; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml,
+  R-2.6.1.ebuild:
+  Forced blas dependency (bug #176755), fixed documentation directory (bug
+  #205103), more concise descriptions
 
 *R-2.6.1 (26 Nov 2007)
 
